--- a/PSPCalculadoraCliente2.0/src/pspcalculadoracliente2/pkg0/InterfazCalculadora.form
+++ b/PSPCalculadoraCliente2.0/src/pspcalculadoracliente2/pkg0/InterfazCalculadora.form
@@ -35,56 +35,60 @@
               <Component id="texto" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
-          <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Component id="bo0" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="boDivi" max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="bo7" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="bo8" min="-2" max="-2" attributes="0"/>
-                  </Group>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="boMulti" max="32767" attributes="0"/>
-                  <Component id="bo9" max="32767" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="boRaiz" min="-2" max="-2" attributes="0"/>
-                  <Component id="boSend" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="0" pref="160" max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="bo4" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="bo5" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="bo6" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="boResta" max="32767" attributes="0"/>
+                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="bo4" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="bo5" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="bo6" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="boResta" max="32767" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="bo1" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="bo2" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="bo3" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="boSuma" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="bo1" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="bo0" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="boDivi" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="bo7" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="bo8" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="bo2" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="boMulti" max="32767" attributes="0"/>
+                          <Component id="bo9" max="32767" attributes="0"/>
+                      </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="bo3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="boSuma" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="boRaiz" min="-2" max="-2" attributes="0"/>
+                          <Component id="boSend" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="boAceptar" max="32767" attributes="0"/>
-                  <Component id="txtpuerto" max="32767" attributes="0"/>
+              <EmptySpace pref="42" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="boAceptar" max="32767" attributes="0"/>
+                      <Component id="txtpuerto" max="32767" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
           </Group>
@@ -96,34 +100,45 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="texto" min="-2" pref="29" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="bo1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bo2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bo3" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="boSuma" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtpuerto" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="bo1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="bo2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="bo3" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="boSuma" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="jLabel1" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="bo4" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bo5" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bo6" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="boResta" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="boAceptar" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="bo7" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bo8" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bo9" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="boRaiz" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="bo0" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="boDivi" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="boSend" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="boMulti" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="bo4" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="bo5" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="bo6" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="boResta" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="bo7" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="bo8" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="bo9" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="boRaiz" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="bo0" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="boDivi" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="boSend" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="boMulti" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                      <Component id="txtpuerto" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="boAceptar" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -273,6 +288,11 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boAceptarActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Puerto:"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
